<?xml version="1.0"?>
<package format="3">
  <name>pinpoint</name>
  <version>1.0.7</version>
  <description>The pinpoint package</description>
  <maintainer email="support@torcrobotics.com">Torc Robotics</maintainer>
  <license>BSD</license>
  <author email="watters@torcrobotics.com">Thomas Watters</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>carma_cmake_common</build_depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>roscpp</depend>
  <depend>pinpoint_driver</depend>
  <depend>gps_common</depend>
  <depend>cav_driver_utils</depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
