<?xml version="1.0"?>
<package format="3">
  <name>pinpoint</name>
  <version>4.0.0</version>
  <description>The pinpoint package</description>
  <maintainer email="carma@dot.gov">carma</maintainer>

  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>carma_cmake_common</build_depend>
  <build_depend>ament_auto_cmake</build_depend>

  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>rclcpp</depend>
  <depend>pinpoint_driver</depend>
  <depend>rclcpp_components</depend>

  <depend>gps_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>carma_ros2_utils</depend>
  <depend>carma_driver_msgs</depend>
  <depend>carma_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>diagnostic_updater</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
