<?xml version="1.0"?>
<package format="3">
  <name>pinpoint_driver</name>
  <version>1.0.0</version>
  <description>The pinpoint_driver package</description>
  <maintainer email="carma@dot.gov">carma</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>carma_cmake_common</build_depend>
  <build_depend>ament_auto_cmake</build_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
